change Custom Metadata Type name

--- a/di-sample-apex-trigger/main/common/layouts/Trigger_Observer__mdt-Trigger Observer Layout.layout-meta.xml
+++ b/di-sample-apex-trigger/main/common/layouts/Trigger_Observer__mdt-Trigger Observer Layout.layout-meta.xml
@@ -15,7 +15,8 @@
                 <field>DeveloperName</field>
             </layoutItems>
             <layoutItems>
-                <emptySpace>true</emptySpace>
+                <behavior>Edit</behavior>
+                <field>Apex_Class__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -30,6 +31,13 @@
                 <field>Active__c</field>
             </layoutItems>
         </layoutColumns>
+        <style>OneColumn</style>
+    </layoutSections>
+    <layoutSections>
+        <customLabel>true</customLabel>
+        <detailHeading>true</detailHeading>
+        <editHeading>true</editHeading>
+        <label>Trigger Operation</label>
         <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -43,6 +51,8 @@
                 <behavior>Edit</behavior>
                 <field>Before_Delete__c</field>
             </layoutItems>
+        </layoutColumns>
+        <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>After_Insert__c</field>
@@ -61,19 +71,6 @@
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
-    </layoutSections>
-    <layoutSections>
-        <customLabel>true</customLabel>
-        <detailHeading>false</detailHeading>
-        <editHeading>false</editHeading>
-        <label>One Column</label>
-        <layoutColumns>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Apex_Class__c</field>
-            </layoutItems>
-        </layoutColumns>
-        <style>OneColumn</style>
     </layoutSections>
     <layoutSections>
         <customLabel>false</customLabel>
